--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,10 +1,10 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "",
+    "username": "postgres",
+    "password": 12345,
+    "database": "kompas_test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   },
   "test": {
     "username": "root",
